# badbit

./: Cargo.toml  README.md
backend/src/: account.rs  db.rs  engine.rs  lib.rs  main.rs  models.rs  orderbook.rs  simulator.rs
backend/tests/: account_test.rs  cancel_order_test.rs  db_test.rs  engine_test.rs  market_order_test.rs  models_test.rs  my_trades_test.rs  orderbook_test.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: AssetsDisplay.tsx  MyTradeHistory.tsx  OpenOrders.tsx  OrderBook.tsx  OrderEntry.tsx  PriceChart.tsx  TradeHistory.tsx
frontend/hooks/: useBalances.ts  useMarketData.ts  useMyOrders.ts  useMyTrades.ts  useOrderBook.ts  useOrderEntry.ts
frontend/types/: index.ts
src/: account.rs  db.rs  engine.rs  main.rs  models.rs  orderbook.rs  simulator.rs  ws_handler_temp.rs
tests/: account_test.rs  engine_test.rs  models_test.rs
