[package]
name = "rust-matching-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
futures = "0.3.31"
rand = "0.9.2"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
ordered-float = { version = "4.2", features = ["serde"] }
