[package]
name = "rust-matching-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
futures = "0.3.31"
rand = "0.9.2"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.36"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
